--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -6,7 +6,7 @@
 .searchButton {
     -fx-font-size: 1.2em;
     -fx-font-weight: bold;
-    -fx-background-color: #ece7e7;
+    -fx-background-color: #65daf4;
 }
 
 .bold {
